--- a/Pages/Cafele/Index.cshtml
+++ b/Pages/Cafele/Index.cshtml
@@ -32,7 +32,7 @@
                 @Html.DisplayFor(modelItem => item.DenumireCafea)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TipCafea)
+                @Html.DisplayFor(modelItem => item.TipCafea.Tip)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Pret)
