Tip Boabe - BUN FINALIZAT (vezi la delete ce ii)

--- a/Pages/Cafele/Delete.cshtml
+++ b/Pages/Cafele/Delete.cshtml
@@ -22,7 +22,13 @@
             @Html.DisplayNameFor(model => model.Cafea.TipCafea)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cafea.TipCafea)
+            @Html.DisplayFor(model => model.Cafea.TipCafea.Tip)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Cafea.TipBoabe)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Cafea.TipBoabe.DenumireBoabe)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cafea.Pret)
