--- a/Pages/Cafele/Index.cshtml
+++ b/Pages/Cafele/Index.cshtml
@@ -23,6 +23,9 @@
                 @Html.DisplayNameFor(model => model.Cafea[0].TipBoabe)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Cafea[0].TipLapte)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Cafea[0].Pret)
             </th>
             <th></th>
@@ -39,6 +42,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TipBoabe.DenumireBoabe)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TipLapte.DenumireLapte)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Pret)
