--- a/Pages/Cafele/Delete.cshtml
+++ b/Pages/Cafele/Delete.cshtml
@@ -19,16 +19,22 @@
             @Html.DisplayFor(model => model.Cafea.DenumireCafea)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cafea.TipCafea)
+            @Html.DisplayNameFor(model => model.Cafea.TipCafea.Tip)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cafea.TipCafea.Tip)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cafea.TipBoabe)
+            @Html.DisplayNameFor(model => model.Cafea.TipBoabe.DenumireBoabe)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cafea.TipBoabe.DenumireBoabe)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Cafea.TipLapte.DenumireLapte)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Cafea.TipLapte.DenumireLapte)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cafea.Pret)
