--- a/Pages/Cafele/Delete.cshtml
+++ b/Pages/Cafele/Delete.cshtml
@@ -37,6 +37,18 @@
             @Html.DisplayFor(model => model.Cafea.TipLapte.DenumireLapte)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Cafea.TipAroma.DenumireAroma)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Cafea.TipAroma.DenumireAroma)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Cafea.TipTopping.DenumireTopping)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Cafea.TipTopping.DenumireTopping)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cafea.Pret)
         </dt>
         <dd class="col-sm-10">
