Eroarea de la DELETE - REZOLVATA

--- a/Pages/Cafele/Delete.cshtml
+++ b/Pages/Cafele/Delete.cshtml
@@ -37,7 +37,7 @@
             @Html.DisplayFor(model => model.Cafea.TipLapte.DenumireLapte)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cafea.TipAroma.DenumireAroma)
+            @Html.DisplayNameFor(model => model.Cafea.TipAroma)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cafea.TipAroma.DenumireAroma)
