--- a/Pages/Cafele/Index.cshtml
+++ b/Pages/Cafele/Index.cshtml
@@ -10,6 +10,18 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
+<form asp-page="./Index" method="get">
+ <div class="form-actions no-color">
+     <p>
+         Căutați cafeaua după un anumi criteriu dorit:
+         <input type="text" name="SearchString" value="@Model.CurrentFilter" />
+         <input type="submit" value="Search" class="btn btn-primary" /> |
+         <a asp-page="./Index">Revenire la lista întreagă</a>
+     </p>
+     </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -38,8 +50,15 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Cafea) {
-        <tr>
+        @foreach ( var item in Model.CafeaD.Cafele)
+        {
+            string selectedRow = "";
+            if(item.ID == Model.CafeaID)
+            {
+                selectedRow = "table-success";
+            }
+
+        <tr class="@selectedRow">
             <td>
                 @Html.DisplayFor(modelItem => item.DenumireCafea)
             </td>
