--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -33,11 +33,13 @@
                         {
                             <select onchange="location = this.value;">
                                 <option value="">Administrator</option>
+                                <option value="/Cafele/Index">Cafele</option>
                                 <option value="/TipuriCafele/Index">Tip Cafea</option>
                                 <option value="/TipuriBoabe/Index">Tip Boabe</option>
                                 <option value="/TipuriLapte/Index">Tip Lapte</option>
                                 <option value="/TipuriArome/Index">Tip Aroma</option>
                                 <option value="/TipuriToppinguri/Index">Tip Topping</option>
+                                <option value="/Membrii/Index">Membrii</option>
                             </select>
 
                             <!--
