--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/PaginiPentruClienti/CreateYourCoffee">Create Your Coffee</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Cafele/Index">Create Your Coffee</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/PaginiPentruClienti/About">About</a>
@@ -33,7 +33,6 @@
                         {
                             <select onchange="location = this.value;">
                                 <option value="">Administrator</option>
-                                <option value="/Cafele/Index">Cafele</option>
                                 <option value="/TipuriCafele/Index">Tip Cafea</option>
                                 <option value="/TipuriBoabe/Index">Tip Boabe</option>
                                 <option value="/TipuriLapte/Index">Tip Lapte</option>
