--- a/Pages/TipuriToppinguri/Index.cshtml
+++ b/Pages/TipuriToppinguri/Index.cshtml
@@ -17,6 +17,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.TipTopping[0].DenumireTopping)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TipTopping[0].Imagine)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -25,6 +28,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.DenumireTopping)
+            </td>
+            <td>
+                <img src="data:image/jpg;base64 , @item.Imagine" , width="210px" , height="140px" , style="border-radius:10px" />
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
