--- a/Pages/TipuriArome/Edit.cshtml
+++ b/Pages/TipuriArome/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="TipAroma.ID" />
             <div class="form-group">
@@ -19,6 +19,13 @@
                 <input asp-for="TipAroma.DenumireAroma" class="form-control" />
                 <span asp-validation-for="TipAroma.DenumireAroma" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="TipAroma.AromaImg" class="control-label"></label>
+                <input asp-for="TipAroma.AromaImg" class="form-control" />
+                <span asp-validation-for="TipAroma.AromaImg" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
