--- a/Pages/TipuriArome/Index.cshtml
+++ b/Pages/TipuriArome/Index.cshtml
@@ -16,21 +16,28 @@
             <th>
                 @Html.DisplayNameFor(model => model.TipAroma[0].DenumireAroma)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TipAroma[0].Imagine)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.TipAroma) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DenumireAroma)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.TipAroma)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DenumireAroma)
+                </td>
+                <td>
+                    <img src="data:image/jpg;base64 , @item.Imagine", width="210px", height="140px", style="border-radius:10px"/>
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
