--- a/Pages/TipuriCafele/Delete.cshtml
+++ b/Pages/TipuriCafele/Delete.cshtml
@@ -18,6 +18,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TipCafea.Tip)
         </dd>
+        @{
+            var item = Model.TipCafea;
+        }
+        <dd class="col-sm-10">
+            <img src="data:image/jpg;base64 , @item.Imagine" , width="310px" , height="240px" , style="border-radius:10px" />
+        </dd>
     </dl>
     
     <form method="post">
