--- a/Pages/TipuriLapte/Details.cshtml
+++ b/Pages/TipuriLapte/Details.cshtml
@@ -17,6 +17,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TipLapte.DenumireLapte)
         </dd>
+
+        @{
+            var item = Model.TipLapte;
+        }
+        <dd class="col-sm-10">
+            <img src="data:image/jpg;base64 , @item.Imagine" , width="310px" , height="240px" , style="border-radius:10px" />
+        </dd>
     </dl>
 </div>
 <div>
